<resources>
    <string name="app_name">Note</string>
    <!--menu add note-->
    <string name="insert_image">Insert image</string>
    <string name="choose_color">Choose color</string>
    <string name="done">Done</string>
    <!--menu home-->
    <string name="new_note">New note</string>
    
    <!--add note-->
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="date_time_format">dd/mm/yyyy hh:ss</string>
    <string name="time_format">hh:ss</string>
    <string name="date_format">dd/mm/yyyy</string>

    <!--image picker-->
    <string name="camera">Take photo</string>
    <string name="gallery">Choose from gallery</string>
    <string name="cancel">Cancel</string>

    <!--dialog delete-->
    <string name="dialog_delete_title">Confirm Delete</string>
    <string name="dialog_delete_content">Are you sure you want to delete this?</string>

    <!--share-->
    <string name="share_dialog">Share note</string>
</resources>
