<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv_root"
    android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_img"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/title"
                android:id="@+id/tv_title"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_date"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/date_time_format"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content" />
            <com.hai.note.custom.view.NoteView
                android:id="@+id/et_title"
                android:textSize="@dimen/text_size_large"
                android:singleLine="true"
                android:layout_marginHorizontal="5dp"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_title"
                android:layout_toLeftOf="@id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <com.hai.note.custom.view.NoteView
            android:id="@+id/et_note"
            android:hint="@string/note"
            android:gravity="top"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:minLines="8"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
            <ImageButton
                android:id="@+id/ibtn_date_alarm"
                android:src="@drawable/ic_date"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/tv_date_alarm"
                android:text="@string/date_format"
                android:textSize="@dimen/text_size_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageButton
                android:id="@+id/ibtn_time_alarm"
                android:src="@drawable/ic_clock"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/tv_time_alarm"
                android:text="@string/time_format"
                android:textSize="@dimen/text_size_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageButton
                android:id="@+id/ibtn_delete"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_delete"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

